--- a/src/qt/pivx/settings/forms/settingswidget.ui
+++ b/src/qt/pivx/settings/forms/settingswidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>629</width>
-    <height>430</height>
+    <height>452</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -147,8 +147,8 @@
              <property name="geometry">
               <rect>
                <x>0</x>
-               <y>-68</y>
-               <width>230</width>
+               <y>-46</y>
+               <width>231</width>
                <height>452</height>
               </rect>
              </property>
@@ -266,7 +266,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>  Wallet Data</string>
+                         <string>.  Wallet Data</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -321,7 +321,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Wallet</string>
+                         <string>.     Wallet</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -349,7 +349,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Multisend</string>
+                         <string>.     Multisend</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -377,7 +377,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Export Accounting</string>
+                         <string>.     Export Accounting</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -432,7 +432,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>  Tools</string>
+                         <string>.  Tools</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -487,7 +487,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Sign/Verify Message</string>
+                         <string>.     Sign/Verify Message</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -515,7 +515,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     BIP38 Tool</string>
+                         <string>.     BIP38 Tool</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -557,7 +557,7 @@
                         <enum>Qt::NoFocus</enum>
                        </property>
                        <property name="text">
-                        <string>  Options</string>
+                        <string>.  Options</string>
                        </property>
                        <property name="checkable">
                         <bool>true</bool>
@@ -611,7 +611,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Main</string>
+                         <string>.     Main</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -642,7 +642,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Wallet</string>
+                         <string>.     Wallet</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -670,7 +670,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Display</string>
+                         <string>.     Display</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -712,7 +712,7 @@
                         <enum>Qt::NoFocus</enum>
                        </property>
                        <property name="text">
-                        <string>  Debug</string>
+                        <string>.  Debug</string>
                        </property>
                        <property name="checkable">
                         <bool>true</bool>
@@ -766,7 +766,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Information</string>
+                         <string>.     Information</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -797,7 +797,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Console</string>
+                         <string>.     Console</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -825,7 +825,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     Wallet Repair</string>
+                         <string>.     Wallet Repair</string>
                         </property>
                         <property name="checkable">
                          <bool>true</bool>
@@ -867,7 +867,7 @@
                         <enum>Qt::NoFocus</enum>
                        </property>
                        <property name="text">
-                        <string>  Help</string>
+                        <string>.  Help</string>
                        </property>
                        <property name="checkable">
                         <bool>true</bool>
@@ -921,7 +921,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     FAQ</string>
+                         <string>.     FAQ</string>
                         </property>
                         <property name="checkable">
                          <bool>false</bool>
@@ -952,7 +952,7 @@
                          <enum>Qt::NoFocus</enum>
                         </property>
                         <property name="text">
-                         <string>     About SKYR</string>
+                         <string>.     About SKYR</string>
                         </property>
                         <property name="checkable">
                          <bool>false</bool>
