--- a/src/qt/pivx/forms/receivewidget.ui
+++ b/src/qt/pivx/forms/receivewidget.ui
@@ -119,7 +119,7 @@
          <widget class="QWidget" name="layoutQR" native="true">
           <property name="maximumSize">
            <size>
-            <width>510</width>
+            <width>16777215</width>
             <height>16777215</height>
            </size>
           </property>
@@ -186,6 +186,12 @@
                <height>0</height>
               </size>
              </property>
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+               <italic>true</italic>
+              </font>
+             </property>
              <layout class="QHBoxLayout" name="horizontalLayout_5">
               <item>
                <widget class="QLabel" name="labelLabel">
@@ -201,7 +207,7 @@
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
-                  <width>141</width>
+                  <width>160</width>
                   <height>20</height>
                  </size>
                 </property>
@@ -262,6 +268,12 @@
             <layout class="QHBoxLayout" name="horizontalLayout_4">
              <item alignment="Qt::AlignHCenter">
               <widget class="QPushButton" name="pushButtonLabel">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="focusPolicy">
                 <enum>Qt::NoFocus</enum>
                </property>
@@ -272,6 +284,12 @@
              </item>
              <item alignment="Qt::AlignHCenter">
               <widget class="QPushButton" name="pushButtonNewAddress">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="focusPolicy">
                 <enum>Qt::NoFocus</enum>
                </property>
@@ -282,6 +300,12 @@
              </item>
              <item alignment="Qt::AlignHCenter">
               <widget class="QPushButton" name="pushButtonCopy">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="focusPolicy">
                 <enum>Qt::NoFocus</enum>
                </property>
