--- a/src/qt/pivx/settings/forms/settingsdisplayoptionswidget.ui
+++ b/src/qt/pivx/settings/forms/settingsdisplayoptionswidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>518</width>
-    <height>440</height>
+    <width>528</width>
+    <height>443</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -280,6 +280,12 @@
           </property>
           <item>
            <widget class="QPushButton" name="pushButtonReset">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>160</width>
@@ -288,8 +294,8 @@
             </property>
             <property name="maximumSize">
              <size>
-              <width>50</width>
-              <height>16777215</height>
+              <width>250</width>
+              <height>50</height>
              </size>
             </property>
             <property name="focusPolicy">
@@ -302,9 +308,21 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonClean">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
+              <height>50</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>250</width>
               <height>50</height>
              </size>
             </property>
@@ -334,6 +352,12 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonSave">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>200</width>
