--- a/src/qt/pivx/settings/forms/settingsmainoptionswidget.ui
+++ b/src/qt/pivx/settings/forms/settingsmainoptionswidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>511</width>
+    <width>528</width>
     <height>434</height>
    </rect>
   </property>
@@ -373,6 +373,12 @@
           </property>
           <item>
            <widget class="QPushButton" name="pushButtonReset">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>160</width>
@@ -381,8 +387,8 @@
             </property>
             <property name="maximumSize">
              <size>
-              <width>50</width>
-              <height>16777215</height>
+              <width>250</width>
+              <height>50</height>
              </size>
             </property>
             <property name="focusPolicy">
@@ -395,9 +401,21 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonClean">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
+              <height>50</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>250</width>
               <height>50</height>
              </size>
             </property>
@@ -427,6 +445,12 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButtonSave">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>200</width>
