--- a/src/qt/pivx/res/css/style_light.css
+++ b/src/qt/pivx/res/css/style_light.css
@@ -535,7 +535,7 @@ QPushButton[cssClass="btn-check-faq"]:checked {
 }
 
 QPushButton[cssClass="btn-check-sync"] {
-  qproperty-icon: url("://ic-check-sync");
+  qproperty-icon: url("://ic-transaction-mint");
   qproperty-iconSize: 24px 24px;
   background-color: #d1d3d4;
   color: #262626;
@@ -545,7 +545,7 @@ QPushButton[cssClass="btn-check-sync"] {
 }
 
 QPushButton[cssClass="btn-check-sync-inactive"] {
-  qproperty-icon: url("://ic-check-sync-off");
+  qproperty-icon: url("://ic-check-sync");
   qproperty-iconSize: 24px 24px;
   background-color: #d1d3d4;
   color: #262626;
