--- a/src/qt/pivx/forms/topbar.ui
+++ b/src/qt/pivx/forms/topbar.ui
@@ -119,7 +119,7 @@
               <item>
                <widget class="QLabel" name="labelAmountPiv">
                 <property name="text">
-                 <string notr="true">480.0685 SKYR</string>
+                 <string notr="true">-.- SKYR</string>
                 </property>
                </widget>
               </item>
@@ -162,7 +162,7 @@
                  <string notr="true">padding:0px;margin:0px;</string>
                 </property>
                 <property name="text">
-                 <string notr="true">480.0685 SKYR</string>
+                 <string notr="true">-.- SKYR</string>
                 </property>
                </widget>
               </item>
@@ -472,7 +472,7 @@
                  <item>
                   <widget class="QLabel" name="labelAvailablePiv">
                    <property name="text">
-                    <string>1.234 SKYR</string>
+                    <string>-.- SKYR</string>
                    </property>
                   </widget>
                  </item>
@@ -486,7 +486,7 @@
                  <item>
                   <widget class="QLabel" name="labelImmaturePiv">
                    <property name="text">
-                    <string notr="true">10 SKYR</string>
+                    <string notr="true">- SKYR</string>
                    </property>
                   </widget>
                  </item>
@@ -507,7 +507,7 @@
                  <item>
                   <widget class="QLabel" name="labelLockedPiv">
                    <property name="text">
-                    <string>345 SKYR</string>
+                    <string>- SKYR</string>
                    </property>
                   </widget>
                  </item>
@@ -521,7 +521,7 @@
                  <item>
                   <widget class="QLabel" name="labelPendingPiv">
                    <property name="text">
-                    <string notr="true">6.943 SKYR</string>
+                    <string notr="true">-.- SKYR</string>
                    </property>
                   </widget>
                  </item>
